Change web3 API to use Spring MVC & virtual threads
Signed-off-by: Steven Sheehy <steven.sheehy@swirldslabs.com>